--- a/app/assets/template.html
+++ b/app/assets/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link href="stylesheets/wayne_sunny.css" rel="stylesheet">
-    <link href="stylesheets/epm_base.css" rel="stylesheet">
+    <link href="stylesheets/_epm_base.css" rel="stylesheet">
     <title>if kpi</title>
 </head>
 <body>
