--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -123,7 +123,7 @@
                style="display:none" onclick="analytic_control_condition_visible()">Analytics</p>
         </div>
         <div class="chart-body" id="chart-body" style="display:none">
-            <div class="clearfix" id="chart-interval-alternate">
+            <div class="clearfix" id="chart-interval-alternate" my_height="28">
                 <ul class="pull-right control-chart-interval-group">
                     <li interval="90" class="active"><a>Hr</a></li>
                     <li interval="100"><a>D</a></li>
@@ -135,7 +135,7 @@
             </div>
             <div class="chart-container" id="chart-container">
             </div>
-            <table class="chart-type-alternate" id="chart-type-alternate">
+            <table class="chart-type-alternate" id="chart-type-alternate"  my_height="70">
                 <tr>
                     <td class="analytics-chart-line active image" type="line">
                         <p style="display:none">Line</p>
@@ -172,15 +172,14 @@
 <script src="javascripts/brilliantech.base.js"></script>
 <script>
     $(document).ready(function () {
-//        var wzx=new interval_template("2013-04");
-//        var btt=new high_chart("chart-container", type_template['line'], wzx['_400'](),[1,2,3,4,5,6,7,8,9,10]);
+//        var wzx=new interval_template("2013",[{y:10},{y:11},{y:12},{y:15}]);
+//        var btt=new high_chart("chart-container", type_template['line'], wzx['_90']());
 //        var chart = new Highcharts.Chart(btt);
         init_analytics();
     });
     $(window).resize(function () {
-        if ($("#chart-body")) {
-            resize_chart();
-        }
+            resize_chart.body();
+            resize_chart.container();
     });
 </script>
 </body>
