--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -125,7 +125,7 @@
         <div class="chart-body" id="chart-body" style="display:none">
             <div class="clearfix" id="chart-interval-alternate" my_height="28">
                 <ul class="pull-right control-chart-interval-group">
-                    <li interval="90" class="active"><a>Hr</a></li>
+                    <li interval="90"><a>Hr</a></li>
                     <li interval="100"><a>D</a></li>
                     <li interval="200"><a>W</a></li>
                     <li interval="300"><a>M</a></li>
@@ -137,7 +137,7 @@
             </div>
             <table class="chart-type-alternate" id="chart-type-alternate"  my_height="70">
                 <tr>
-                    <td class="analytics-chart-line active image" type="line">
+                    <td class="analytics-chart-line" type="line">
                         <p style="display:none">Line</p>
                     </td>
                     <td class="analytics-chart-column" type="column">
