--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -133,7 +133,7 @@
                     <li interval="500"><a>Y</a></li>
                 </ul>
             </div>
-            <div class="chart-container" id="chart-container">
+            <div class="chart-container relative" id="chart-container">
             </div>
             <table class="chart-type-alternate" id="chart-type-alternate"  my_height="70">
                 <tr>
@@ -178,8 +178,8 @@
         init_analytics();
     });
     $(window).resize(function () {
-            resize_chart.body();
-            resize_chart.container();
+        resize_chart.body();
+        resize_chart.container();
     });
 </script>
 </body>
