--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -168,6 +168,7 @@
 <script src="javascripts/Template.js"></script>
 <script src="javascripts/date_picker_template.js"></script>
 <script src="javascripts/high_chart_template.js"></script>
+<!--<script src="javascripts/high_chart_template1.js"></script>-->
 <script src="javascripts/Analytics_init.js"></script>
 <script src="javascripts/brilliantech.base.js"></script>
 <script>
