--- a/app/assets/template.html
+++ b/app/assets/template.html
@@ -57,9 +57,12 @@
         </nav>
     </header>
 </article>
-<script src="javascripts/jquery-1.8.3.min.js"></script>
-<script src="javascripts/jquery-ui-1.10.3.custom.min.js"></script>
+<div class="message-box" id="MessageBox">
+    <p></p>
+</div>
+<script src="javascripts/jquery-1.8.2.min.js"></script>
 <script src="javascripts/wayne-base.js"></script>
 <script src="javascripts/Template.js"></script>
+<script src="javascripts/brilliantech.base.js"></script>
 </body>
 </html>
