--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -5,6 +5,8 @@
     <link href="stylesheets/wayne_sunny.css" rel="stylesheet">
     <link href="stylesheets/_epm_base.css" rel="stylesheet">
     <link href="stylesheets/font-awesome.min.css" rel="stylesheet">
+    <link href="stylesheets/Manage.css" rel="stylesheet">
+    <link href="stylesheets/Manage-kpi.css" rel="stylesheet">
     <title>if kpi</title>
 </head>
 <body>
@@ -57,6 +59,44 @@
             </ul>
         </nav>
     </header>
+
+
+
+
+
+
+
+
+
+
+
+
+    <ul class="manage-left-menu" id="manage-left-menu">
+       <li>Manage KPI</li>
+       <li><i class="icon-plus"></i> Category</li>
+       <li class="active" title="Category1" number="1">
+           <i class="icon-trash icon-item"></i>
+           <a>Category1</a>
+       </li>
+       <li title="Category2" number="2">
+           <i class="icon-trash icon-item"></i>
+           <a >Category2</a>
+       </li>
+       <li title="Category3" number="3">
+           <i class="icon-trash icon-item"></i>
+           <a>Category3</a>
+       </li>
+    </ul>
+
+
+
+
+
+
+
+
+
+
 </article>
 <div class="message-box" id="MessageBox">
     <p></p>
