--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -80,6 +80,7 @@
                     </select>
                     <select data-placeholder="Kpi *" style="width:150px;" class="chosen-select" title="analy-kpi-select"
                             id="chart-kpi" date-pick=false>
+                        <option value=""> </option>
                         <option value="kpi1" interval="200" type="">week</option>
                         <option value="kpi1" interval="90">hour</option>
                         <option value="kpi1" interval="100">day</option>
